# APPLE

./: README.md
apple_dataset/: pyproject.toml  requirements.txt
apple_dataset/apple_dataset/: apple_annotater.py  apple_pick.py  config.py
apple_dataset/scripts/: annotate_force.py
